Fix CSS margin for profile picture and update HTML for accurate location names and spacing

--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ h3, p {
 }
 
 .profile-pic {
-    margin: auto 10;
+    margin: auto 10px;
     display: inline-block;
     width: 100px;
     height: 100px;
